Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -55,5 +55,6 @@
   "dhp302:1": "Teško je monah postati, teško se tome radovati, ",
   "dhp302:2": "teško kuću kućiti, ",
   "dhp302:3": "teško je društvo nedoraslih, ",
-  "dhp302:4": "preporađanje je uvek bolno, "
+  "dhp302:4": "preporađanje je uvek bolno, ",
+  "dhp302:5": "zato, ne preporađaj se više, "
 }
