Translations by HarDao to translation/pl/hardao/sutta/kn/dhp/dhp157-166_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/kn/dhp/dhp157-166_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/kn/dhp/dhp157-166_translation-pl-hardao.json
@@ -1,4 +1,5 @@
 {
   "dhp160:1": "Każdy sam sobie jest obrońcą, ",
-  "dhp160:2": "któż inny mógłby być czyimś obrońcą? "
+  "dhp160:2": "któż inny mógłby być czyimś obrońcą? ",
+  "dhp160:3": "Kto dobrze siebie poskromi, "
 }
