--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -56,5 +56,6 @@
   "dhp302:2": "teško kuću kućiti, ",
   "dhp302:3": "teško je društvo nedoraslih, ",
   "dhp302:4": "preporađanje je uvek bolno, ",
-  "dhp302:5": "zato, ne preporađaj se više, "
+  "dhp302:5": "zato, ne preporađaj se više, ",
+  "dhp302:6": "da te patnja dalje ne prati. "
 }
