--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -58,5 +58,6 @@
   "dhp302:4": "preporađanje je uvek bolno, ",
   "dhp302:5": "zato, ne preporađaj se više, ",
   "dhp302:6": "da te patnja dalje ne prati. ",
-  "dhp303:1": "Ispunjen pouzdanjem, vrlinom, "
+  "dhp303:1": "Ispunjen pouzdanjem, vrlinom, ",
+  "dhp303:2": "obdaren slavom i bogatstvom, "
 }
