Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -59,5 +59,6 @@
   "dhp302:5": "zato, ne preporađaj se više, ",
   "dhp302:6": "da te patnja dalje ne prati. ",
   "dhp303:1": "Ispunjen pouzdanjem, vrlinom, ",
-  "dhp303:2": "obdaren slavom i bogatstvom, "
+  "dhp303:2": "obdaren slavom i bogatstvom, ",
+  "dhp303:3": "gde god da se nađe, "
 }
