Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -61,5 +61,6 @@
   "dhp303:1": "Ispunjen pouzdanjem, vrlinom, ",
   "dhp303:2": "obdaren slavom i bogatstvom, ",
   "dhp303:3": "gde god da se nađe, ",
-  "dhp303:4": "tamo sa poštovanjem biva dočekan. "
+  "dhp303:4": "tamo sa poštovanjem biva dočekan. ",
+  "dhp304:1": "Izdaleka blistaju dobri, "
 }
