--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -62,5 +62,6 @@
   "dhp303:2": "obdaren slavom i bogatstvom, ",
   "dhp303:3": "gde god da se nađe, ",
   "dhp303:4": "tamo sa poštovanjem biva dočekan. ",
-  "dhp304:1": "Izdaleka blistaju dobri, "
+  "dhp304:1": "Izdaleka blistaju dobri, ",
+  "dhp304:2": "slično vrhovima Himalaja; "
 }
