Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -63,5 +63,6 @@
   "dhp303:3": "gde god da se nađe, ",
   "dhp303:4": "tamo sa poštovanjem biva dočekan. ",
   "dhp304:1": "Izdaleka blistaju dobri, ",
-  "dhp304:2": "slično vrhovima Himalaja; "
+  "dhp304:2": "slično vrhovima Himalaja; ",
+  "dhp304:3": "rđavi, makar i blizu bili, "
 }
