Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -64,5 +64,6 @@
   "dhp303:4": "tamo sa poštovanjem biva dočekan. ",
   "dhp304:1": "Izdaleka blistaju dobri, ",
   "dhp304:2": "slično vrhovima Himalaja; ",
-  "dhp304:3": "rđavi, makar i blizu bili, "
+  "dhp304:3": "rđavi, makar i blizu bili, ",
+  "dhp304:4": "nevidljivi su poput strele odapete u noć. "
 }
