--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -66,5 +66,6 @@
   "dhp304:2": "slično vrhovima Himalaja; ",
   "dhp304:3": "rđavi, makar i blizu bili, ",
   "dhp304:4": "nevidljivi su poput strele odapete u noć. ",
-  "dhp305:1": "Ko sedi sam, spava sam, "
+  "dhp305:1": "Ko sedi sam, spava sam, ",
+  "dhp305:2": "ide sam neumorno, "
 }
