--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -67,5 +67,6 @@
   "dhp304:3": "rđavi, makar i blizu bili, ",
   "dhp304:4": "nevidljivi su poput strele odapete u noć. ",
   "dhp305:1": "Ko sedi sam, spava sam, ",
-  "dhp305:2": "ide sam neumorno, "
+  "dhp305:2": "ide sam neumorno, ",
+  "dhp305:3": "sam sebe obuzdavajući – "
 }
