Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -68,5 +68,6 @@
   "dhp304:4": "nevidljivi su poput strele odapete u noć. ",
   "dhp305:1": "Ko sedi sam, spava sam, ",
   "dhp305:2": "ide sam neumorno, ",
-  "dhp305:3": "sam sebe obuzdavajući – "
+  "dhp305:3": "sam sebe obuzdavajući – ",
+  "dhp305:4": "takav se ushićuje životom u šumi. "
 }
