--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp306:0.1": "Kratka zbirka Budnih govora ",
   "dhp306:0.2": "Reči mudrosti ",
-  "dhp306:0.3": "Čistilište "
+  "dhp306:0.3": "Čistilište ",
+  "dhp306:1": "Lažljivac u čistilištu1 završava, "
 }
