Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp306:0.2": "Reči mudrosti ",
   "dhp306:0.3": "Čistilište ",
   "dhp306:1": "Lažljivac u čistilištu1 završava, ",
-  "dhp306:2": "kao i onaj ko poriče učinjeno; "
+  "dhp306:2": "kao i onaj ko poriče učinjeno; ",
+  "dhp306:3": "obojicu prestupnika isto čeka kad umru, "
 }
