--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp306:0.3": "Čistilište ",
   "dhp306:1": "Lažljivac u čistilištu1 završava, ",
   "dhp306:2": "kao i onaj ko poriče učinjeno; ",
-  "dhp306:3": "obojicu prestupnika isto čeka kad umru, "
+  "dhp306:3": "obojicu prestupnika isto čeka kad umru, ",
+  "dhp306:4": "u sledećem životu. "
 }
