Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp306:1": "Lažljivac u čistilištu1 završava, ",
   "dhp306:2": "kao i onaj ko poriče učinjeno; ",
   "dhp306:3": "obojicu prestupnika isto čeka kad umru, ",
-  "dhp306:4": "u sledećem životu. "
+  "dhp306:4": "u sledećem životu. ",
+  "dhp307:1": "Mnogi su u žutom ogrtaču, "
 }
