--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp306:3": "obojicu prestupnika isto čeka kad umru, ",
   "dhp306:4": "u sledećem životu. ",
   "dhp307:1": "Mnogi su u žutom ogrtaču, ",
-  "dhp307:2": "ali sa rđavim delima, neobuzdani; "
+  "dhp307:2": "ali sa rđavim delima, neobuzdani; ",
+  "dhp307:3": "takve sopstvena rđava dela "
 }
