Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp306:4": "u sledećem životu. ",
   "dhp307:1": "Mnogi su u žutom ogrtaču, ",
   "dhp307:2": "ali sa rđavim delima, neobuzdani; ",
-  "dhp307:3": "takve sopstvena rđava dela "
+  "dhp307:3": "takve sopstvena rđava dela ",
+  "dhp307:4": "vode pravo u čistilište. "
 }
