--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp307:1": "Mnogi su u žutom ogrtaču, ",
   "dhp307:2": "ali sa rđavim delima, neobuzdani; ",
   "dhp307:3": "takve sopstvena rđava dela ",
-  "dhp307:4": "vode pravo u čistilište. "
+  "dhp307:4": "vode pravo u čistilište. ",
+  "dhp308:1": "Bolje je monahu "
 }
