Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp307:2": "ali sa rđavim delima, neobuzdani; ",
   "dhp307:3": "takve sopstvena rđava dela ",
   "dhp307:4": "vode pravo u čistilište. ",
-  "dhp308:1": "Bolje je monahu "
+  "dhp308:1": "Bolje je monahu ",
+  "dhp308:2": "i užarenu kuglu da proguta, "
 }
