Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp307:4": "vode pravo u čistilište. ",
   "dhp308:1": "Bolje je monahu ",
   "dhp308:2": "i užarenu kuglu da proguta, ",
-  "dhp308:3": "nego da, tako dvoličan, neobuzdan, "
+  "dhp308:3": "nego da, tako dvoličan, neobuzdan, ",
+  "dhp308:4": "jede ono što je isprosio. "
 }
