--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp308:1": "Bolje je monahu ",
   "dhp308:2": "i užarenu kuglu da proguta, ",
   "dhp308:3": "nego da, tako dvoličan, neobuzdan, ",
-  "dhp308:4": "jede ono što je isprosio. "
+  "dhp308:4": "jede ono što je isprosio. ",
+  "dhp309:1": "Četiri nevolje čekaju nepromišljenog, "
 }
