--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp308:4": "jede ono što je isprosio. ",
   "dhp309:1": "Četiri nevolje čekaju nepromišljenog, ",
   "dhp309:2": "koji tuđe žene zavodi: ",
-  "dhp309:3": "gomilanje loših dela, nesanica, osuda i, "
+  "dhp309:3": "gomilanje loših dela, nesanica, osuda i, ",
+  "dhp309:4": "kao četvrto, čistilište. "
 }
