Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp309:1": "Četiri nevolje čekaju nepromišljenog, ",
   "dhp309:2": "koji tuđe žene zavodi: ",
   "dhp309:3": "gomilanje loših dela, nesanica, osuda i, ",
-  "dhp309:4": "kao četvrto, čistilište. "
+  "dhp309:4": "kao četvrto, čistilište. ",
+  "dhp310:1": "Taj nevoljnik gomila loša dela i preporađa se u čistilištu, "
 }
