--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dhp309:2": "koji tuđe žene zavodi: ",
   "dhp309:3": "gomilanje loših dela, nesanica, osuda i, ",
   "dhp309:4": "kao četvrto, čistilište. ",
-  "dhp310:1": "Taj nevoljnik gomila loša dela i preporađa se u čistilištu, "
+  "dhp310:1": "Taj nevoljnik gomila loša dela i preporađa se u čistilištu, ",
+  "dhp310:2": "malo zadovoljstva ljubavi u strahu, "
 }
