Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp310:1": "Taj nevoljnik gomila loša dela i preporađa se u čistilištu, ",
   "dhp310:2": "malo zadovoljstva ljubavi u strahu, ",
   "dhp310:3": "a kazna vladareva odista teška. ",
-  "dhp310:4": "Zbog svega toga, čovek nek ne juri za ženama tuđim. "
+  "dhp310:4": "Zbog svega toga, čovek nek ne juri za ženama tuđim. ",
+  "dhp311:1": "Baš kao što oštra kusa trava, "
 }
