--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp310:3": "a kazna vladareva odista teška. ",
   "dhp310:4": "Zbog svega toga, čovek nek ne juri za ženama tuđim. ",
   "dhp311:1": "Baš kao što oštra kusa trava, ",
-  "dhp311:2": "uhvaćena pogrešno, poseče ruku, "
+  "dhp311:2": "uhvaćena pogrešno, poseče ruku, ",
+  "dhp311:3": "tako i monaški život, shvaćen pogrešno, "
 }
