Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp311:1": "Baš kao što oštra kusa trava, ",
   "dhp311:2": "uhvaćena pogrešno, poseče ruku, ",
   "dhp311:3": "tako i monaški život, shvaćen pogrešno, ",
-  "dhp311:4": "u čistilište odvodi. "
+  "dhp311:4": "u čistilište odvodi. ",
+  "dhp312:1": "Nesmotrena dela, "
 }
