--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp311:2": "uhvaćena pogrešno, poseče ruku, ",
   "dhp311:3": "tako i monaški život, shvaćen pogrešno, ",
   "dhp311:4": "u čistilište odvodi. ",
-  "dhp312:1": "Nesmotrena dela, "
+  "dhp312:1": "Nesmotrena dela, ",
+  "dhp312:2": "lako kršenje zaveta, "
 }
