Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp311:3": "tako i monaški život, shvaćen pogrešno, ",
   "dhp311:4": "u čistilište odvodi. ",
   "dhp312:1": "Nesmotrena dela, ",
-  "dhp312:2": "lako kršenje zaveta, "
+  "dhp312:2": "lako kršenje zaveta, ",
+  "dhp312:3": "sumnjiv monaški život – "
 }
