Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -28,5 +28,6 @@
   "dhp311:4": "u čistilište odvodi. ",
   "dhp312:1": "Nesmotrena dela, ",
   "dhp312:2": "lako kršenje zaveta, ",
-  "dhp312:3": "sumnjiv monaški život – "
+  "dhp312:3": "sumnjiv monaški život – ",
+  "dhp312:4": "sve to mnogo dobrog ne donosi. "
 }
