--- a/translation/pl/hardao/sutta/kn/dhp/dhp157-166_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/kn/dhp/dhp157-166_translation-pl-hardao.json
@@ -1,5 +1,6 @@
 {
   "dhp160:1": "Każdy obrońcą jest sam dla siebie, ",
   "dhp160:2": "któż inny mógłby być czyimś obrońcą? ",
-  "dhp160:3": "Kto dobrze poskromi samego siebie, "
+  "dhp160:3": "Kto dobrze poskromi samego siebie, ",
+  "dhp160:4": "obrońcę zyska, którego rzadko się znajdzie. "
 }
