--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp312:1": "Nesmotrena dela, ",
   "dhp312:2": "lako kršenje zaveta, ",
   "dhp312:3": "sumnjiv monaški život – ",
-  "dhp312:4": "sve to mnogo dobrog ne donosi. "
+  "dhp312:4": "sve to mnogo dobrog ne donosi. ",
+  "dhp313:1": "Ono što učiniti treba, "
 }
