--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp312:4": "sve to mnogo dobrog ne donosi. ",
   "dhp313:1": "Ono što učiniti treba, ",
   "dhp313:2": "uradi, bez oklevanja. ",
-  "dhp313:3": "Svakim kolebanjem "
+  "dhp313:3": "Svakim kolebanjem ",
+  "dhp313:4": "monah samo novu buru strasti diže. "
 }
