Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp313:2": "uradi, bez oklevanja. ",
   "dhp313:3": "Svakim kolebanjem ",
   "dhp313:4": "monah samo novu buru strasti diže. ",
-  "dhp314:1": "Loše delo je bolje ostaviti neučinjenim, "
+  "dhp314:1": "Loše delo je bolje ostaviti neučinjenim, ",
+  "dhp314:2": "jer za njim muka sledi. "
 }
