--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp313:3": "Svakim kolebanjem ",
   "dhp313:4": "monah samo novu buru strasti diže. ",
   "dhp314:1": "Loše delo je bolje ostaviti neučinjenim, ",
-  "dhp314:2": "jer za njim muka sledi. "
+  "dhp314:2": "jer za njim muka sledi. ",
+  "dhp314:3": "Mnogo je bolje učiniti dobro delo, "
 }
