--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp314:1": "Loše delo je bolje ostaviti neučinjenim, ",
   "dhp314:2": "jer za njim muka sledi. ",
   "dhp314:3": "Mnogo je bolje učiniti dobro delo, ",
-  "dhp314:4": "jer tada muke nema. "
+  "dhp314:4": "jer tada muke nema. ",
+  "dhp315:1": "Kao što je grad na granici "
 }
