--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dhp314:3": "Mnogo je bolje učiniti dobro delo, ",
   "dhp314:4": "jer tada muke nema. ",
   "dhp315:1": "Kao što je grad na granici ",
-  "dhp315:2": "dobro čuvan i spolja i iznutra, "
+  "dhp315:2": "dobro čuvan i spolja i iznutra, ",
+  "dhp315:3": "isto tako sebe čuvajte. "
 }
