Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp314:4": "jer tada muke nema. ",
   "dhp315:1": "Kao što je grad na granici ",
   "dhp315:2": "dobro čuvan i spolja i iznutra, ",
-  "dhp315:3": "isto tako sebe čuvajte. "
+  "dhp315:3": "isto tako sebe čuvajte. ",
+  "dhp315:4": "Neka vam ova šansa ne promakne. "
 }
