Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -41,5 +41,6 @@
   "dhp315:1": "Kao što je grad na granici ",
   "dhp315:2": "dobro čuvan i spolja i iznutra, ",
   "dhp315:3": "isto tako sebe čuvajte. ",
-  "dhp315:4": "Neka vam ova šansa ne promakne. "
+  "dhp315:4": "Neka vam ova šansa ne promakne. ",
+  "dhp315:5": "Propuštene prilike zaista su bolne, "
 }
