--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp315:2": "dobro čuvan i spolja i iznutra, ",
   "dhp315:3": "isto tako sebe čuvajte. ",
   "dhp315:4": "Neka vam ova šansa ne promakne. ",
-  "dhp315:5": "Propuštene prilike zaista su bolne, "
+  "dhp315:5": "Propuštene prilike zaista su bolne, ",
+  "dhp315:6": "u nevoljama okončavamo. "
 }
