Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp315:3": "isto tako sebe čuvajte. ",
   "dhp315:4": "Neka vam ova šansa ne promakne. ",
   "dhp315:5": "Propuštene prilike zaista su bolne, ",
-  "dhp315:6": "u nevoljama okončavamo. "
+  "dhp315:6": "u nevoljama okončavamo. ",
+  "dhp316:1": "Ne stide se sramotnog, "
 }
