Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp315:5": "Propuštene prilike zaista su bolne, ",
   "dhp315:6": "u nevoljama okončavamo. ",
   "dhp316:1": "Ne stide se sramotnog, ",
-  "dhp316:2": "a stide onog što sramotno nije. "
+  "dhp316:2": "a stide onog što sramotno nije. ",
+  "dhp316:3": "Kad tako pogrešno vide stvari, "
 }
