--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp315:6": "u nevoljama okončavamo. ",
   "dhp316:1": "Ne stide se sramotnog, ",
   "dhp316:2": "a stide onog što sramotno nije. ",
-  "dhp316:3": "Kad tako pogrešno vide stvari, "
+  "dhp316:3": "Kad tako pogrešno vide stvari, ",
+  "dhp316:4": "bića u mnoge nevolje srljaju. "
 }
