--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp316:1": "Ne stide se sramotnog, ",
   "dhp316:2": "a stide onog što sramotno nije. ",
   "dhp316:3": "Kad tako pogrešno vide stvari, ",
-  "dhp316:4": "bića u mnoge nevolje srljaju. "
+  "dhp316:4": "bića u mnoge nevolje srljaju. ",
+  "dhp317:1": "Ne plaše se strašnog, "
 }
