--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -49,5 +49,6 @@
   "dhp316:3": "Kad tako pogrešno vide stvari, ",
   "dhp316:4": "bića u mnoge nevolje srljaju. ",
   "dhp317:1": "Ne plaše se strašnog, ",
-  "dhp317:2": "a plaše onog što strašno nije. "
+  "dhp317:2": "a plaše onog što strašno nije. ",
+  "dhp317:3": "Kad tako pogrešno vide stvari, "
 }
