--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -53,5 +53,6 @@
   "dhp317:3": "Kad tako pogrešno vide stvari, ",
   "dhp317:4": "bića u mnoge nevolje srljaju. ",
   "dhp318:1": "U ispravnom vide pogrešno, ",
-  "dhp318:2": "a u pogrešnom vide ispravno. "
+  "dhp318:2": "a u pogrešnom vide ispravno. ",
+  "dhp318:3": "Kad tako pogrešno vide stvari, "
 }
