Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -56,5 +56,6 @@
   "dhp318:2": "a u pogrešnom vide ispravno. ",
   "dhp318:3": "Kad tako pogrešno vide stvari, ",
   "dhp318:4": "bića u mnoge nevolje srljaju. ",
-  "dhp319:1": "Pogrešno kao pogrešno znaju, "
+  "dhp319:1": "Pogrešno kao pogrešno znaju, ",
+  "dhp319:2": "a ispravno kao ispravno. "
 }
