--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp306-319_translation-sr-brankokovacevic.json
@@ -58,5 +58,6 @@
   "dhp318:4": "bića u mnoge nevolje srljaju. ",
   "dhp319:1": "Pogrešno kao pogrešno znaju, ",
   "dhp319:2": "a ispravno kao ispravno. ",
-  "dhp319:3": "Kad tako ispravno vide stvari, "
+  "dhp319:3": "Kad tako ispravno vide stvari, ",
+  "dhp319:4": "bića do mnogo sreće dolaze. "
 }
