--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp320:0.1": "Kratka zbirka Budnih govora ",
-  "dhp320:0.2": "Reči mudrosti "
+  "dhp320:0.2": "Reči mudrosti ",
+  "dhp320:0.3": "Slon "
 }
