--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp320:0.1": "Kratka zbirka Budnih govora ",
   "dhp320:0.2": "Reči mudrosti ",
-  "dhp320:0.3": "Slon "
+  "dhp320:0.3": "Slon ",
+  "dhp320:1": "Kao što slon u bici podnosi "
 }
