Translations by HarDao to translation/pl/hardao/sutta/kn/dhp/dhp1-20_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/kn/dhp/dhp1-20_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/kn/dhp/dhp1-20_translation-pl-hardao.json
@@ -9,7 +9,7 @@
   "dhp1:6": "niczym koło wozu w ślad za wołem. ",
   "dhp2:1": "Umysł poprzedza wszelki stan rzeczy, ",
   "dhp2:2": "umysł kieruje, umysł kreuje, ",
-  "dhp2:3": "Kto z pogodą w umyśle ",
+  "dhp2:3": "Kto z jasnością w umyśle ",
   "dhp2:4": "mówić bądź czynić będzie, ",
   "dhp2:5": "szczęście podąży za nim wszędzie, ",
   "dhp2:6": "niczym nieodzowny cień. ",
