--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp320:1": "Kao što slon u bici podnosi ",
   "dhp320:2": "strele iz luka odapete, ",
   "dhp320:3": "tako ću i ja uvrede podnositi. ",
-  "dhp320:4": "Mnogo je ljudi slabog morala. "
+  "dhp320:4": "Mnogo je ljudi slabog morala. ",
+  "dhp321:1": "Ukroćenog slona među gomilu vode, "
 }
