Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dhp320:2": "strele iz luka odapete, ",
   "dhp320:3": "tako ću i ja uvrede podnositi. ",
   "dhp320:4": "Mnogo je ljudi slabog morala. ",
-  "dhp321:1": "Ukroćenog slona među gomilu vode, "
+  "dhp321:1": "Ukroćenog slona među gomilu vode, ",
+  "dhp321:2": "ukroćenog i kralj jaši. "
 }
