--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp321:1": "Ukroćenog slona među gomilu vode, ",
   "dhp321:2": "ukroćenog i kralj jaši. ",
   "dhp321:3": "Ukroćeni je najbolji i među ljudima, ",
-  "dhp321:4": "onaj uvredama neokrznut. "
+  "dhp321:4": "onaj uvredama neokrznut. ",
+  "dhp322:1": "Izvanredne su ukroćene mule, "
 }
