Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp321:2": "ukroćenog i kralj jaši. ",
   "dhp321:3": "Ukroćeni je najbolji i među ljudima, ",
   "dhp321:4": "onaj uvredama neokrznut. ",
-  "dhp322:1": "Izvanredne su ukroćene mule, "
+  "dhp322:1": "Izvanredne su ukroćene mule, ",
+  "dhp322:2": "čistokrvni atovi iz Sinda "
 }
