Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -11,5 +11,6 @@
   "dhp321:3": "Ukroćeni je najbolji i među ljudima, ",
   "dhp321:4": "onaj uvredama neokrznut. ",
   "dhp322:1": "Izvanredne su ukroćene mule, ",
-  "dhp322:2": "čistokrvni atovi iz Sinda "
+  "dhp322:2": "čistokrvni atovi iz Sinda ",
+  "dhp322:3": "i slonovi moćnih kljova, "
 }
