Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp321:4": "onaj uvredama neokrznut. ",
   "dhp322:1": "Izvanredne su ukroćene mule, ",
   "dhp322:2": "čistokrvni atovi iz Sinda ",
-  "dhp322:3": "i slonovi moćnih kljova, "
+  "dhp322:3": "i slonovi moćnih kljova, ",
+  "dhp322:4": "al’ još je bolji onaj ko je sebe ukrotio, "
 }
