Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp322:1": "Izvanredne su ukroćene mule, ",
   "dhp322:2": "čistokrvni atovi iz Sinda ",
   "dhp322:3": "i slonovi moćnih kljova, ",
-  "dhp322:4": "al’ još je bolji onaj ko je sebe ukrotio, "
+  "dhp322:4": "al’ još je bolji onaj ko je sebe ukrotio, ",
+  "dhp323:1": "jer ne može se ni sa svima njima "
 }
