--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp322:2": "čistokrvni atovi iz Sinda ",
   "dhp322:3": "i slonovi moćnih kljova, ",
   "dhp322:4": "al’ još je bolji onaj ko je sebe ukrotio, ",
-  "dhp323:1": "jer ne može se ni sa svima njima "
+  "dhp323:1": "jer ne može se ni sa svima njima ",
+  "dhp323:2": "u zemlju još neposećenu stići, "
 }
