--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp323:1": "jer ne može se ni sa svima njima ",
   "dhp323:2": "u zemlju još neposećenu stići, ",
   "dhp323:3": "k’o što to obuzdani čini, ",
-  "dhp323:4": "kroteći i usmeravajući sopstveni um. "
+  "dhp323:4": "kroteći i usmeravajući sopstveni um. ",
+  "dhp324:1": "Slon po imenu Dhanapāla, "
 }
