Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dhp323:2": "u zemlju još neposećenu stići, ",
   "dhp323:3": "k’o što to obuzdani čini, ",
   "dhp323:4": "kroteći i usmeravajući sopstveni um. ",
-  "dhp324:1": "Slon po imenu Dhanapāla, "
+  "dhp324:1": "Slon po imenu Dhanapāla, ",
+  "dhp324:2": "silan i za kroćenje pretežak, "
 }
