Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp323:4": "kroteći i usmeravajući sopstveni um. ",
   "dhp324:1": "Slon po imenu Dhanapāla, ",
   "dhp324:2": "silan i za kroćenje pretežak, ",
-  "dhp324:3": "u ropstvu hranu niti da onjuši, "
+  "dhp324:3": "u ropstvu hranu niti da onjuši, ",
+  "dhp324:4": "sve tužeći za šumom svojom. "
 }
