Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp324:2": "silan i za kroćenje pretežak, ",
   "dhp324:3": "u ropstvu hranu niti da onjuši, ",
   "dhp324:4": "sve tužeći za šumom svojom. ",
-  "dhp325:1": "Lenjivac, onaj ko je proždrljiv "
+  "dhp325:1": "Lenjivac, onaj ko je proždrljiv ",
+  "dhp325:2": "i onaj ko uvek spava i lenčari "
 }
