Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -24,5 +24,6 @@
   "dhp324:4": "sve tužeći za šumom svojom. ",
   "dhp325:1": "Lenjivac, onaj ko je proždrljiv ",
   "dhp325:2": "i onaj ko uvek spava i lenčari ",
-  "dhp325:3": "poput kakve svinje pregojene, "
+  "dhp325:3": "poput kakve svinje pregojene, ",
+  "dhp325:4": "takav se zaista uvek iznova preporađa. "
 }
