Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp325:1": "Lenjivac, onaj ko je proždrljiv ",
   "dhp325:2": "i onaj ko uvek spava i lenčari ",
   "dhp325:3": "poput kakve svinje pregojene, ",
-  "dhp325:4": "takav se zaista uvek iznova preporađa. "
+  "dhp325:4": "takav se zaista uvek iznova preporađa. ",
+  "dhp326:1": "Ovaj um moj je na besciljno lutanje navikao, "
 }
