--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp325:3": "poput kakve svinje pregojene, ",
   "dhp325:4": "takav se zaista uvek iznova preporađa. ",
   "dhp326:1": "Ovaj um moj je na besciljno lutanje navikao, ",
-  "dhp326:2": "kad mu se svidi, kud mu se prohte i kako god želi, "
+  "dhp326:2": "kad mu se svidi, kud mu se prohte i kako god želi, ",
+  "dhp326:3": "ali danas ću ga do kraja obuzdati, "
 }
