--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp326:1": "Ovaj um moj je na besciljno lutanje navikao, ",
   "dhp326:2": "kad mu se svidi, kud mu se prohte i kako god želi, ",
   "dhp326:3": "ali danas ću ga do kraja obuzdati, ",
-  "dhp326:4": "kao što gonič štapom svog slona kroti. "
+  "dhp326:4": "kao što gonič štapom svog slona kroti. ",
+  "dhp327:1": "Ushićuj se marljivošću, "
 }
