Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp326:2": "kad mu se svidi, kud mu se prohte i kako god želi, ",
   "dhp326:3": "ali danas ću ga do kraja obuzdati, ",
   "dhp326:4": "kao što gonič štapom svog slona kroti. ",
-  "dhp327:1": "Ushićuj se marljivošću, "
+  "dhp327:1": "Ushićuj se marljivošću, ",
+  "dhp327:2": "štiti sopstveni um, "
 }
