--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp326:3": "ali danas ću ga do kraja obuzdati, ",
   "dhp326:4": "kao što gonič štapom svog slona kroti. ",
   "dhp327:1": "Ushićuj se marljivošću, ",
-  "dhp327:2": "štiti sopstveni um, "
+  "dhp327:2": "štiti sopstveni um, ",
+  "dhp327:3": "sa lošeg puta sam sebe uzdigni, "
 }
