Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp327:1": "Ushićuj se marljivošću, ",
   "dhp327:2": "štiti sopstveni um, ",
   "dhp327:3": "sa lošeg puta sam sebe uzdigni, ",
-  "dhp327:4": "kao i slon kad u mulj upadne. "
+  "dhp327:4": "kao i slon kad u mulj upadne. ",
+  "dhp328:1": "Ako naiđeš na mudrog saputnika, "
 }
