Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp327:2": "štiti sopstveni um, ",
   "dhp327:3": "sa lošeg puta sam sebe uzdigni, ",
   "dhp327:4": "kao i slon kad u mulj upadne. ",
-  "dhp328:1": "Ako naiđeš na mudrog saputnika, "
+  "dhp328:1": "Ako naiđeš na mudrog saputnika, ",
+  "dhp328:2": "čistih dela, čvrstog u vrlini, "
 }
