--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp327:3": "sa lošeg puta sam sebe uzdigni, ",
   "dhp327:4": "kao i slon kad u mulj upadne. ",
   "dhp328:1": "Ako naiđeš na mudrog saputnika, ",
-  "dhp328:2": "čistih dela, čvrstog u vrlini, "
+  "dhp328:2": "čistih dela, čvrstog u vrlini, ",
+  "dhp328:3": "prevladavši prepreke sve, "
 }
