Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp327:4": "kao i slon kad u mulj upadne. ",
   "dhp328:1": "Ako naiđeš na mudrog saputnika, ",
   "dhp328:2": "čistih dela, čvrstog u vrlini, ",
-  "dhp328:3": "prevladavši prepreke sve, "
+  "dhp328:3": "prevladavši prepreke sve, ",
+  "dhp328:4": "takvom se obradovan i sabran pridruži. "
 }
