--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp328:4": "takvom se obradovan i sabran pridruži. ",
   "dhp329:1": "Ako ne naiđeš na mudrog saputnika, ",
   "dhp329:2": "čistih dela, čvrstog u vrlini, ",
-  "dhp329:3": "tada k’o kralj što zemlju u boju izgubi "
+  "dhp329:3": "tada k’o kralj što zemlju u boju izgubi ",
+  "dhp329:4": "ili slon u šumi, sam se zaputi. "
 }
