Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -41,5 +41,6 @@
   "dhp329:1": "Ako ne naiđeš na mudrog saputnika, ",
   "dhp329:2": "čistih dela, čvrstog u vrlini, ",
   "dhp329:3": "tada k’o kralj što zemlju u boju izgubi ",
-  "dhp329:4": "ili slon u šumi, sam se zaputi. "
+  "dhp329:4": "ili slon u šumi, sam se zaputi. ",
+  "dhp330:1": "Bolje je živeti sam, "
 }
