Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp329:2": "čistih dela, čvrstog u vrlini, ",
   "dhp329:3": "tada k’o kralj što zemlju u boju izgubi ",
   "dhp329:4": "ili slon u šumi, sam se zaputi. ",
-  "dhp330:1": "Bolje je živeti sam, "
+  "dhp330:1": "Bolje je živeti sam, ",
+  "dhp330:2": "jer nema drugarstva sa budalom. "
 }
