Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp329:3": "tada k’o kralj što zemlju u boju izgubi ",
   "dhp329:4": "ili slon u šumi, sam se zaputi. ",
   "dhp330:1": "Bolje je živeti sam, ",
-  "dhp330:2": "jer nema drugarstva sa budalom. "
+  "dhp330:2": "jer nema drugarstva sa budalom. ",
+  "dhp330:3": "Sam se kreći i ne čini ništa loše, "
 }
