Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -44,5 +44,6 @@
   "dhp329:4": "ili slon u šumi, sam se zaputi. ",
   "dhp330:1": "Bolje je živeti sam, ",
   "dhp330:2": "jer nema drugarstva sa budalom. ",
-  "dhp330:3": "Sam se kreći i ne čini ništa loše, "
+  "dhp330:3": "Sam se kreći i ne čini ništa loše, ",
+  "dhp330:4": "zadovoljan i s malim, k’o slon u šumi samotan. "
 }
