--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp330:1": "Bolje je živeti sam, ",
   "dhp330:2": "jer nema drugarstva sa budalom. ",
   "dhp330:3": "Sam se kreći i ne čini ništa loše, ",
-  "dhp330:4": "zadovoljan i s malim, k’o slon u šumi samotan. "
+  "dhp330:4": "zadovoljan i s malim, k’o slon u šumi samotan. ",
+  "dhp331:1": "Sreća je imati prijatelje kad nevolja naiđe. "
 }
