Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp330:3": "Sam se kreći i ne čini ništa loše, ",
   "dhp330:4": "zadovoljan i s malim, k’o slon u šumi samotan. ",
   "dhp331:1": "Sreća je imati prijatelje kad nevolja naiđe. ",
-  "dhp331:2": "Sreća je kad smo i sa malo zadovoljni. "
+  "dhp331:2": "Sreća je kad smo i sa malo zadovoljni. ",
+  "dhp331:3": "Sreća su mnoga naša dobročinstva kad život okončavamo. "
 }
