--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -49,5 +49,6 @@
   "dhp331:1": "Sreća je imati prijatelje kad nevolja naiđe. ",
   "dhp331:2": "Sreća je kad smo i sa malo zadovoljni. ",
   "dhp331:3": "Sreća su mnoga naša dobročinstva kad život okončavamo. ",
-  "dhp331:4": "Sreća je kad se oslobodimo svake patnje. "
+  "dhp331:4": "Sreća je kad se oslobodimo svake patnje. ",
+  "dhp332:1": "Sreća je na svetu ovom pomagati sopstvenoj majci, "
 }
